@@ -1,3 +1,4 @@
+* Added the possibility to hide and show the linktray. currently you can toggle this with ctrl+s(erikos)
 * Port to new tubes API. (cassidy)
 * Use sugar's tubeconn.py. (cassidy)
 
